Attempt to add a way to kill a query thread.